<resources>
    <string name="app_name">VirtualWing</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="welcome_dcs">Welcome to DCS mode, %1$s</string>
    <string name="welcome_msfs">Welcome to MSFS mode, %1$s</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_virtual_wings">Welcome To Virtual Wings!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="flight_hours">Flight Hours: %d</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="favorite_aircraft_comma_separated">Favorite Aircraft (comma-separated)</string>
    <string name="save_profile">Save Profile</string>
    <string name="aircraft_flown">Aircraft Flown</string>
    <string name="mission_type">Mission Type</string>
    <string name="save_log">Save Log</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="flight_log">Flight Log</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Back to Login</string>
    <string name="select_flight_sims">Select Flight Sims</string>
    <string name="select_flight_sim">Select Sim for Flight Log</string>
    <string name="wingmen">Enter name of Wingmen</string>
    <string name="dcs_world">DCS World</string>
    <string name="msfs_2020">MSFS 2020</string>
    <string name="view_logs">View Logs</string>
    <string name="toggle_sort_order">Toggle Sort Order</string>
    <string name="search_logs">Search logs...</string>
    <string name="date">Date</string>
    <string name="aircraft_type">Aircraft Type</string>
    <string name="create_squadron">Create Squadron</string>
    <string name="description">Description</string>
    <string name="squadron_name">Squadron Name</string>
    <string name="upload_emblem">Upload Emblem</string>
    <string name="squadron_emblem">Squadron Emblem</string>
    <string name="leave_squadron">Leave Squadron</string>
    <string name="disband_squadron">Disband Squadron</string>
    <string name="squadron_members">%1$s members</string>
    <string name="squadron">Squadron</string>
    <string name="join_existing_squadron">Join A Squadron</string>
    <string name="no_squadrons_available">No Squadrons Available</string>
    <string name="request_to_join">Request to Join</string>
    <string name="welcome_to_virtualwing_squadrons">Welcome to VirtualWing Squadrons!</string>
    <string name="squadron_name_hint">Squadron Name</string>
    <string name="squadron_description_hint">Description</string>
    <string name="upload_emblem_icon">Upload Emblem Icon</string>
    <string name="join_a_squadron">Join a Squadron</string>
    <string name="squadron_description">Description\n</string>
    <string name="squadron_join_request">Request To Join</string>
    <string name="squadron_creator">Created by</string>
    <string name="squadron_timezone">Timezone\n</string>
    <string name="squadron_region">Region</string>
    <string name="view_join_requests">View Join Requests</string>
    <string name="pilot_name">Pilot Name</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="pending_join_requests">Pending Join Requests</string>
    <string name="request_count">0</string>
    <string name="member_name">Member Name</string>
    <string name="make_admin">Make Admin</string>
    <string name="remove">Remove</string>
    <string name="arrange_flight">Arrange Flight</string>
</resources>